force-app/main/default/objects/Key_Date__c/Key_Date__c.object-meta.xml
<CustomObject>
    <label>Key Date</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>