force-app/main/default/objects/Key_Date__c/fields/Key_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Date</label>
    <type>Date</type>
</CustomField>