force-app/main/default/objects/Key_Date__c/fields/Key_Date_Category__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Category__c</fullName>
    <label>Key Date Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Join date</fullName>
            </value>
            <value>
                <fullName>Approved date</fullName>
            </value>
            <value>
                <fullName>Ceremony</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>