force-app/main/default/objects/Key_Date__c/fields/Key_Date_Description__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Description__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Key Date Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>