force-app/main/default/objects/Key_Date__c/fields/Key_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Date Time</label>
    <type>DateTime</type>
</CustomField>