force-app/main/default/objects/Key_Date__c/fields/Key_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Today__c</fullName>
    <formula>DATE(
YEAR(Today()),
MONTH(Key_Date__c),
DAY(Key_Date__c)   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Date Today</label>
    <type>Date</type>
</CustomField>