force-app/main/default/objects/Key_Date__c/fields/Patron__c.field-meta.xml
<CustomField>
    <fullName>Patron__c</fullName>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Dates</relationshipLabel>
    <relationshipName>Key_Dates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>