force-app/main/default/objects/Key_Date__c/validationRules/Validate_Edit_Operation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Edit_Operation</fullName>
    <active>true</active>
    <description>User should not be able to edit date record if type is KYC</description>
    <errorConditionFormula>AND(
    $Permission.Skip_Validations_Permission = FALSE,
    OR(ISPICKVAL(PRIORVALUE(Key_Date_Category__c), &quot;KYC&quot;),ISPICKVAL(Key_Date_Category__c, &quot;KYC&quot;)),
    Active__c = true,       
    NOT(ISNEW()),
    NOT(AND(PRIORVALUE(Active__c) = false, Active__c = true)),
    OR(Name = &quot;Due Date&quot;, Name = &quot;Attestation Date&quot;, Name = &quot;Due Date Override&quot;,PRIORVALUE(Name)= &quot;Due Date&quot;, PRIORVALUE(Name)= &quot;Attestation Date&quot;, PRIORVALUE(Name)= &quot;Due Date Override&quot;)
)</errorConditionFormula>
    <errorMessage>The KYC date cannot be edited. Please contact your administrator if changes are required.</errorMessage>
</ValidationRule>