force-app/main/default/objects/Key_Date__c/validationRules/Validate_ReadOnly_Operation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_ReadOnly_Operation</fullName>
    <active>true</active>
    <description>User should not be able to edit KYC Date.</description>
    <errorConditionFormula>AND(
    $Permission.Skip_Validations_Permission = FALSE,
    NOT(ISNEW()),
    NOT(
        OR(
            $Permission.TSEG_Premium_Guest_Services = TRUE,
            $Permission.TSEG_Casino_Host_Access_PS = TRUE,
            $Permission.TSEG_CRM_Manager = TRUE
        )),
    NOT(
        OR(
            ISPICKVAL(PRIORVALUE(Key_Date_Category__c), &quot;KYC&quot;),
            ISPICKVAL(Key_Date_Category__c, &quot;KYC&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Key date cannot be edited. Please contact your administrator if changes are required.</errorMessage>
</ValidationRule>